# pgrag

./: README.md  docker-compose.yml  test-doc.txt
app/backend/: .env.example  Dockerfile  pyproject.toml
app/backend/learn_function_calling/: function_calling.md  function_calling.py
app/backend/learn_mcp/: 00_mcp_intro.md  01_hello_mcp.md  01_hello_mcp.py  02_tools_deep.md  02_tools_deep.py  03_resources.md  03_resources.py  04_context.md  04_context.py  05_client_test.py  05_http_and_client.md  05_http_and_client.py  06_exposing_with_ngrok.md  pyproject.toml  transports.md
app/backend/src/pg_rag/: config.py  database.py  embeddings.py  main.py  models.py  rag.py  schemas.py
app/backend/src/pg_rag/mcp_integration/: README.md  __init__.py  rag_client.py  rag_native.py  server.py
app/backend/src/pg_rag/routers/: chat.py  documents.py
app/frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
app/frontend/src/: App.tsx  index.css
app/frontend/src/components/: ChatPanel.tsx  DocumentUpload.tsx  icons.tsx
